# folly

./: .gitignore  CMakeLists.txt
CMake/: FindDoubleConversion.cmake  FollyCompiler.cmake  FollyFunctions.cmake  MSVCDefaults.cmake  folly-config.h.cmake  folly-deps.cmake
folly/: AtomicHashArray-inl.h  AtomicHashArray.h  AtomicLinkedList.h  Bits.h  CPortability.cpp  CPortability.h  Conv.h  EvictingCacheMap.h  FBString.h  FilePortability.h  Format-inl.h  Format.cpp  Hash.h  IndexedMemPool.h  LifoSem.h  Makefile.am  Portability.h  RWSpinLock.h  Random.cpp  SharedMutex.h  Singleton-inl.h  Singleton.h  SocketAddress.cpp  SocketAddress.h  SocketPortability.cpp  SocketPortability.h  Subprocess.cpp  Subprocess.h  Synchronized.h  Traits.h  WindowsPortability.h  dynamic-inl.h  dynamic.cpp  json.cpp
folly/detail/: CacheLocality.cpp
folly/experimental/: TestUtil.cpp
folly/experimental/fibers/: FiberManager.cpp
folly/futures/: Future.h
folly/io/: IOBuf.h
folly/io/async/: AsyncSSLSocket.cpp  AsyncSSLSocket.h  AsyncServerSocket.cpp  AsyncServerSocket.h  AsyncSocket.cpp  AsyncSocket.h  AsyncTimeout.cpp  AsyncTransport.h  AsyncUDPSocket.cpp  EventBase.cpp  EventHandler.cpp  EventUtil.h  NotificationQueue.h  Request.h  SSLContext.cpp
folly/stats/: TimeseriesHistogram.h
folly/test/: SocketAddressTest.cpp  SubprocessTest.cpp
